Commit : Add Swagger. update code to me more clean